# python-design-patterns

./: .gitignore  README.md  pyproject.toml
observer/: README.md  exemplo1.py  exemplo2.py  exemplo3.py
strategy/: README.md  exemplo1.py  exemplo2.py
